# fifa-wc-notifier

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: notify.yml
fifa_wc/: __init__.py  __main__.py  config.py  content.py  football.py  whatsapp.py  youtube.py
prompts/preview/: system.md  user.md
prompts/recap/: system.md  user.md
src/: __init__.py  config.py  log.py  models.py  pipeline.py
src/clients/: __init__.py  football.py  whatsapp.py  youtube.py
src/services/: __init__.py  card.py  content.py  flags.py  prompts.py
templates/: card.html.j2
