[project]
name = "fifa-wc-notifier"
version = "0.1.0"
description = "Daily FIFA World Cup 2026 WhatsApp notifier (preview + recap)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "google-genai>=1.0",
    "pydantic-settings>=2.0",
    "tzdata>=2024.1",
    "playwright>=1.60.0",
    "jinja2>=3.1.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "UP", "B", "ANN", "D", "SIM"]
ignore = ["D203", "D213", "D107"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "google"
